@@ -1,4 +1,6 @@
 from math import sin, cos
+import pytest
+
 from funcy.calc import *
 
 
@@ -8,7 +10,7 @@ def test_make_lookuper():
         return {c: i for i, c in enumerate('abcdefghij')}
 
     assert letter_index('c') == 2
-    assert letter_index('_') is None
+    with pytest.raises(KeyError): letter_index('_')
 
 
 def test_make_lookuper_nested():
@@ -23,3 +25,23 @@ def test_make_lookuper_nested():
     assert function_table(cos)(3) == cos(3)
     assert function_table(sin)(3) == sin(3)
     assert tables_built[0] == 2
+
+    with pytest.raises(KeyError): function_table(cos)(-1)
+
+
+def test_silent_lookuper():
+    @silent_lookuper
+    def letter_index():
+        return {c: i for i, c in enumerate('abcdefghij')}
+
+    assert letter_index('c') == 2
+    assert letter_index('_') is None
+
+
+def test_silnent_lookuper_nested():
+    @silent_lookuper
+    def function_table(f):
+        return {x: f(x) for x in range(10)}
+
+    assert function_table(sin)(5) == sin(5)
+    assert function_table(cos)(-1) is None
